# litehttp-c

./: .gitignore  CMakeLists.txt  ISSUE.md  README.md
cmake/: add_project_lib.cmake
config/: config.toml
res/: index.html
src/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt  client.c  configure.c  http_method.c  http_method_dispatch.c  reactor.c  server.c  socket_util.c
src/core/include/: client.h  configure.h  http_method_dispatch.h  reactor.h  server.h  socket_util.h
src/http/: CMakeLists.txt  html_file.c  http_parse_ctx_internal.h  http_parse_dfa.c  http_parser.c  http_request.c  http_response.c  http_types.c  resource_getter.c
src/http/include/: html_file.h  http_hdr.def  http_parse_dfa.h  http_parser.h  http_request.h  http_response.h  http_status.def  http_types.h  resource_getter.h
src/util/: CMakeLists.txt  base.c  error_code.c  string_t.c
src/util/include/: base.h  error_code.h  http_ec.def  message.def  static_test.h  string_t.h
test/: CMakeLists.txt
test/simple_client/: CMakeLists.txt  chat_client.c  http_client.c  recv_client.c  send_client.c
test/unittest/: CMakeLists.txt
test/unittest/http/: CMakeLists.txt  http_parse_dfs_test.c  http_parser_test.c  resource_getter_test.c
test/unittest/include/: test_util.h
test/unittest/util/: CMakeLists.txt  string_t_test.c  string_view_t_test.c
